PyBorg ChangeLog
~~~~~~~~~~~~~~~~

v1.1.1 - 19/9/2006
~~~~~~~~~~~~~~~~~~

* Added a tribune interface ( in the experimental directory )

* Added a regular expression system for aliases and censored list( exemple '~bisous': ['bi(s|z+)(ou|e?)(s*|x?)'] )

* Faster load

* Added a no_save option

~~~~~~~~~~~~~~~~

v1.1.0 - 15/8/2006
~~~~~~~~~~~~~~~~~~

* Added a msn interface

* Added a megahal interface

* Rewritted the reply routine. Now PyBorg use a markov chain system.

* Added a !talk command for make the bot talk to somebody on IRC

* Added !purge command. It purge the dictionary for words who are very rare.

* Added new filters for learn only real words ( no nicknames, no stranges
wors )

* Save now the nicknames as '#nick' word, and replace it by the nickname of
the target when speaking to somebody

* Rewritted the censor routine. Now I am sure that the words won't be
learned and won't be spoken

* Added a file 'words.txt', containing all the words known.

* New unlearn system, with a 'unlearn.txt' file, wich contain all the
words that PyBorg has to unlearn.

* Added a limit in the number of known words. With the !purge command and the
unlearn.txt file, 6000-8000 words are now enought.

* Bug fixed in the rebuilddict routine

* Added a ignore list, wich contain the words wich have no importances in the
sence of the sentece.

* Added an alias system : the PyBorg can now associate words written
diffrently ( i.e 'you' and 'u' )

* Added an !alias command for control the use of the aliases.

* PyBorg continue to learn sentence, even if the learning setting is off
( but it will not learn any new words )

* Added a time pause for simulate a writting time

* Save now all the .dat files in a zip file

* The *.cfg files are now more easy to read, with multi-lines display

~~~~~~~~~~~~~~~~

v1.0.6 - 29/4/2002
~~~~~~~~~~~~~~~~~~

* Added !rebuilddict command. I suggest you run this command when using
1.0.6 for the first time with an old dictionary.
