@@ -1,6 +1,10 @@
 PyBorg ChangeLog
 ~~~~~~~~~~~~~~~~
 
+v??? - 17/3/2014
+~~~~~~~~~~~~~~~~~~
+Added reply to nickname and reply to magic word functions
+
 v1.1.1 - 19/9/2006
 ~~~~~~~~~~~~~~~~~~
 
